# nodeJS-ChanhXe-Managenment/src/routers/phanCongXeRouter.js
@@ -13,10 +13,10 @@ const {
     checkUserPermission,
 } = require("../middleware/JWTaction");
 
-router.get("/phancongxe", checkUserJWT, getAllVehicleAssignments);
-router.get("/phancongxe/:id", checkUserJWT, getVehicleAssignmentById);
-router.post("/phancongxe", checkUserJWT, createVehicleAssignment);
-router.put("/phancongxe/:id", checkUserJWT, updateVehicleAssignment);
-router.delete("/phancongxe/:id", checkUserJWT, deleteVehicleAssignment);
+router.get("/phan-cong-xe", checkUserJWT, getAllVehicleAssignments);
+router.get("/phan-cong-xe/:id", checkUserJWT, getVehicleAssignmentById);
+router.post("/phan-cong-xe", checkUserJWT, createVehicleAssignment);
+router.put("/phan-cong-xe/:id", checkUserJWT, updateVehicleAssignment);
+router.delete("/phan-cong-xe/:id", checkUserJWT, deleteVehicleAssignment);
 
 module.exports = router;
